--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,17 @@ babel==2.17.0
 bcrypt==4.3.0
 black==23.11.0
 boto3==1.37.6
-email-validator==2.2.0
+email_validator==2.2.0
 fastapi==0.115.11
 flake8==6.1.0
 grpcio-status==1.71.0
 h2==4.2.0
 isort==5.12.0
+langchain-community==0.3.27
+langchain-google-genai==2.1.9
+langchain-openai==0.3.31
+langgraph-supervisor==0.0.29
 passlib==1.7.4
-pip==25.1
 PyJWT==2.10.1
 pytest-asyncio==0.21.1
 python-jose==3.4.0
