--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ h2==4.2.0
 isort==5.12.0
 langchain-community==0.3.27
 langchain-google-genai==2.1.9
-langchain-openai==0.3.31
+langchain-openai
 langgraph-supervisor==0.0.29
 passlib==1.7.4
 PyJWT==2.10.1
@@ -27,4 +27,4 @@ wheel==0.45.1
 xxhash==3.5.0
 python-dotenv==1.1.0
 pydantic-settings==2.9.1
-openai==1.65.4
+openai
